--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="rest">Rest</string>
     <string name="_00_00">00:00</string>
     <string name="subset_type">subset type</string>
+    <string name="add_exercise">Add Exercise</string>
+    <string name="delete">DELETE</string>
 </resources>
